# afr-hello-world

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
freertos-configs/: FreeRTOSConfig.h
freertos-configs/default_pkcs11_config/: core_pkcs11_config.h
src/: main.c
unit-test-app/: CMakeLists.txt
